--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           tokenClient = google.accounts.oauth2.initTokenClient({
               client_id: '764306262696-esbdj8daoee741d44fdhrh5fehjtjjm5.apps.googleusercontent.com',
               scope: 'https://www.googleapis.com/auth/calendar https://www.googleapis.com/auth/spreadsheets https://www.googleapis.com/auth/drive.metadata.readonly',
-              // prompt: 'consent',
+              prompt: '',
               callback: '',  // defined at request time in await/promise scope.
           });
           resolve();
