--- a/index.html
+++ b/index.html
@@ -1,118 +1,54 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body>
-  <h1>GAPI with GIS async/await</h1>
-  <button id="showEventsBtn" onclick="showEvents();">Show Calendar</button><br><br>
-  <button id="revokeBtn" onclick="revokeToken();">Revoke access token</button>
+<head>
+    <title>Chat GPT</title>
+    <script src="ChatGPT.js?v=15"></script>
+    <script src="app.js"></script>
 
-  <script>
+</head>
+<body onload="OnLoad()">
 
-    const gapiLoadPromise = new Promise((resolve, reject) => {
-      gapiLoadOkay = resolve;
-      gapiLoadFail = reject;
-    });
-    const gisLoadPromise = new Promise((resolve, reject) => {
-      gisLoadOkay = resolve;
-      gisLoadFail = reject;
-    });
+    <div id="idContainer">
+        <textarea id="txtOutput" rows="10" style="margin-top: 10px; 
+         width: 100%;" placeholder="Output"></textarea>
 
-    var tokenClient;
+        <div>
+            <button type="button" onclick="Send()" id="btnSend">Send</button>
+            <label id="lblSpeak"><input id="chkSpeak" type="checkbox" 
+             onclick="SpeechToText()" />Listen</label>
+            <label id="lblMute"><input id="chkMute" type="checkbox" 
+             onclick="Mute(this.checked)" />Mute</label>
 
-    (async () => {
-      document.getElementById("showEventsBtn").style.visibility="hidden";
-      document.getElementById("revokeBtn").style.visibility="hidden";
+            <select id="selModel">
+                <option value="text-davinci-003">text-davinci-003</option>
+                <option value="text-davinci-002">text-davinci-002</option>
+                <option value="code-davinci-002">code-davinci-002</option>
+                <option value="gpt-3.5-turbo">gpt-3.5-turbo</option>
+                <option value="gpt-3.5-turbo-0301">gpt-3.5-turbo-0301</option>
+            </select>
 
-      // First, load and initialize the gapi.client
-      await gapiLoadPromise;
-      await new Promise((resolve, reject) => {
-        // NOTE: the 'auth2' module is no longer loaded.
-        gapi.load('client', {callback: resolve, onerror: reject});
-      });
-      await gapi.client.init({
-        // NOTE: OAuth2 'scope' and 'client_id' parameters have moved to initTokenClient().
-        discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4", 
-                           "https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest",
-                           "https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]
-      })
-      .then(function() {  // Load the Calendar API discovery document.
-        gapi.client.load();
-      });
+            <select id="selLang" onchange="ChangeLang(this)">
+                <option value="en-US">English (United States)</option>
+                <option value="fr-FR">French (France)</option>
+                <option value="ru-RU">Russian (Russia)</option>
+                <option value="pt-BR">Portuguese (Brazil)</option>
+                <option value="es-ES">Spanish (Spain)</option>
+                <option value="de-DE">German (Germany)</option>
+                <option value="it-IT">Italian (Italy)</option>
+                <option value="pl-PL">Polish (Poland)</option>
+                <option value="nl-NL">Dutch (Netherlands)</option>
+            </select>
 
-      // Now load the GIS client
-      await gisLoadPromise;
-      await new Promise((resolve, reject) => {
-        try {
-          tokenClient = google.accounts.oauth2.initTokenClient({
-              client_id: '764306262696-esbdj8daoee741d44fdhrh5fehjtjjm5.apps.googleusercontent.com',
-              scope: 'https://www.googleapis.com/auth/calendar https://www.googleapis.com/auth/spreadsheets https://www.googleapis.com/auth/drive.metadata.readonly',
-              prompt: '',
-              callback: '',  // defined at request time in await/promise scope.
-          });
-          resolve();
-        } catch (err) {
-          reject(err);
-        }
-      });
+            <select id="selVoices"></select>
+            <span id="spMsg"></span>
+        </div>
 
-      document.getElementById("showEventsBtn").style.visibility="visible";
-      document.getElementById("revokeBtn").style.visibility="visible";
-    })();
+        <textarea id="txtMsg" rows="5" wrap="soft" style="width: 98%; 
+         margin-left: 3px; margin-top: 6px" placeholder="Input Text"></textarea>
 
-    async function getToken(err) {
-
-      if (err.result.error.code == 401 || (err.result.error.code == 403) &&
-          (err.result.error.status == "PERMISSION_DENIED")) {
-
-        // The access token is missing, invalid, or expired, prompt for user consent to obtain one.
-        await new Promise((resolve, reject) => {
-          try {
-            // Settle this promise in the response callback for requestAccessToken()
-            tokenClient.callback = (resp) => {
-              if (resp.error !== undefined) {
-                reject(resp);
-              }
-              // GIS has automatically updated gapi.client with the newly issued access token.
-              console.log('gapi.client access token: ' + JSON.stringify(gapi.client.getToken()));
-              resolve(resp);
-            };
-            tokenClient.requestAccessToken();
-          } catch (err) {
-            console.log(err)
-          }
-        });
-      } else {
-        // Errors unrelated to authorization: server errors, exceeding quota, bad requests, and so on.
-        throw new Error(err);
-      }
-    }
-
-    function showEvents() {
-
-      console.log('gapi.client.getToken()', gapi.client.getToken())
-
-      // Try to fetch a list of Calendar events. If a valid access token is needed,
-      // prompt to obtain one and then retry the original request.
-      gapi.client.calendar.events.list({ 'calendarId': 'primary' })
-      .then(calendarAPIResponse => console.log(JSON.stringify(calendarAPIResponse)))
-      .catch(err  => getToken(err))  // for authorization errors obtain an access token
-      .then(retry => gapi.client.calendar.events.list({ 'calendarId': 'primary' }))
-      .then(calendarAPIResponse => console.log(JSON.stringify(calendarAPIResponse)))
-      .catch(err  => console.log(err));   // cancelled by user, timeout, etc.
-    }
-
-    function revokeToken() {
-      let cred = gapi.client.getToken();
-      if (cred !== null) {
-        google.accounts.oauth2.revoke(cred.access_token, () => {console.log('Revoked: ' + cred.access_token)});
-        gapi.client.setToken('');
-      }
-    }
-
-  </script>
-
-  <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoadOkay()" onerror="gapiLoadFail(event)"></script>
-  <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoadOkay()" onerror="gisLoadFail(event)"></script>
+        <div id="idText"></div>
+    </div>
 
 </body>
 </html>
+
